Mention --std=c++0x option in ChangeLog because I keep forgetting how to spell it.
* ChangeLog


git-svn-id: https://russ.yanofsky.org/svn/rref/trunk@67 87d60978-04f8-0310-94d5-9d4cc9172693

--- a/ChangeLog
+++ b/ChangeLog
@@ -27,7 +27,7 @@
 	(cp_parser_conversion_declarator_opt): same
 	(cp_parser_declarator): same
 	(cp_parser_ptr_operator): parse "&&" tokens into rvalue reference
-	declarators
+	declarators when --std=c++0x option is passed to g++
 	* gcc/cp/pt.c (tsubst_aggr_type): update call to 
 	cp_build_qualified_type_real
 	(tsubst_function_type): same
