Implement new simpler rules for reference collapsing that changed between N1855 and N1952 (sections 7.1.3/9 and 14.3.1/4).
* gcc/cp/cp-tree.h
  (cp_build_qualified_type_real): revert change to function signature

* gcc/cp/tree.c
  (cp_build_qualified_type_real): revert all changes to this function

* gcc/cp/pt.c
  (tsubst_aggr_type, tsubst_function_type, tsubst): revert changes to
    cp_build_qualified_type_real calls

* gcc/cp/decl.c
  (grokdeclarator): revert all changes apart from basic reference collapsing
    logic

* gcc/testsuite/g++.dg/rref/collapse.C
    update test case to reflect new rules

* ChangeLog
    update


git-svn-id: https://russ.yanofsky.org/svn/rref/trunk@68 87d60978-04f8-0310-94d5-9d4cc9172693

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,19 +1,18 @@
-2006-12-06  Russell Yanofsky <russ@yanofsky.org>
+2006-12-14  Russell Yanofsky <russ@yanofsky.org>
 
-	Add support for rvalue references to G++
+	Add support for rvalue references to G++ under --std=c++0x mode
 	* gcc/cp/call.c (conversion): new "valuedness_matches_p" member
 	(convert_class_to_reference): require reference type as first 
 	parameter instead of base type
 	(reference_binding): add logic to handle rvalue references
 	(implicit_conversion): update inaccurate comment
 	(convert_like_real): disable creation of temporaries that are
-	impossible to initialize for types that have move constructors
+	impossible to initialize for types with move constructors
 	(maybe_handle_implicit_object): set "valuedness_matches_p"
 	(maybe_handle_ref_bind): return conversion instead of type node
 	(compare_ics): add logic to use "valuedness_matches_p" values to
 	determine preferred conversion sequences
 	* gcc/cp/cp-tree.h (declarator): new "rvalue_ref" flag
-	(cp_build_qualified_type_real): new "fold_ref" boolean parameter
 	* gcc/cp/decl.c (grokdeclarator): implement reference collapsing
 	(copy_fn_p): don't consider constructors taking rvalue references
 	to be copy constructors
@@ -27,12 +26,8 @@
 	(cp_parser_conversion_declarator_opt): same
 	(cp_parser_declarator): same
 	(cp_parser_ptr_operator): parse "&&" tokens into rvalue reference
-	declarators when --std=c++0x option is passed to g++
-	* gcc/cp/pt.c (tsubst_aggr_type): update call to 
-	cp_build_qualified_type_real
-	(tsubst_function_type): same
-	(tsubst_1): rename of tsubst function adding "fold_ref" parameter
-	and implementing reference collapsing logic
+	declarators when --std=c++0x option is present
+	* gcc/cp/pt.c (tsubst): implement reference collapsing
 	(type_unification_real): implement special template parameter
 	deduction rule for rvalue references
 	(try_one_overload): update call to unify
@@ -42,7 +37,6 @@
 	(more_specialized_fn): update calls to unify
 	(get_class_bindings): same
 	* gcc/cp/tree.c (lvalue_p_1): handle rvalue reference types
-	(cp_build_qualified_type_real): new "fold_ref" boolean parameter
 	* gcc/cp/typeck.c (comptypes): don't consider rvalue and lvalue
 	reference types to be equivalent
 	* gcc/tree.h
