Add testcase that fails due to implicit rvalue casting added by the previous change.
* gcc/testsuite/g++.dg/rref/elision_weak.C: new
* gcc/testsuite/g++.dg/rref/README: new testcase description


git-svn-id: https://russ.yanofsky.org/svn/rref/trunk@77 87d60978-04f8-0310-94d5-9d4cc9172693

--- a/gcc/testsuite/g++.dg/rref/README
+++ b/gcc/testsuite/g++.dg/rref/README
@@ -61,3 +61,6 @@ temp-va-arg-bug.C
   These tests are simplified versions of the g++.dg/ext/complit2.C
   and g++.old-deja/g++.other/vaarg2.C testcases, respectively.
 
+elision_weak.C
+  tests that implicit rvalue casts are "weak" and do not prevent returned or
+  thrown lvalues from binding to non-const copy constructors
