Update comments all over the code and disable reference collapsing behavior outside of --std=c++0x mode.
* gcc/cp/typeck.c
* gcc/cp/decl.c
* gcc/cp/call.c
* gcc/cp/except.c
* gcc/cp/pt.c
* ChangeLog


git-svn-id: https://russ.yanofsky.org/svn/rref/trunk@83 87d60978-04f8-0310-94d5-9d4cc9172693

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2006-02-20  Russell Yanofsky <russ@yanofsky.org>
             Doug Gregor <doug.gregor@gmail.com>
+            Howard Hinnant <howard.hinnant@gmail.com>
 
 	Add support for rvalue references to G++ under --std=c++0x mode
 	* gcc/cp/call.c (conversion): new "valuedness_matches_p" member
