--- a/ChangeLog
+++ b/ChangeLog
@@ -38,8 +38,8 @@
 	* gcc/cp/pt.c (tsubst): implement reference collapsing
 	(maybe_adjust_types_for_deduction): implement special template
 	parameter deduction rule for rvalue references
-	(type_unification_real, try_one_overload): update calls to
-	maybe_adjust_types_for_deduction
+	(type_unification_real, try_one_overload, unify_pack_expansion):
+	update calls to	maybe_adjust_types_for_deduction
 	* gcc/cp/tree.c (lvalue_p_1): handle rvalue reference types
 	(cp_build_reference_type): new function
 	* gcc/cp/typeck.c (comptypes): don't consider rvalue and lvalue
